@@ -761,7 +761,7 @@ swfu.customSetting["a_dom_setting"].style.visibility = "hidden";</code>
 	<h2><a name="plugins"></a>SWFUpload Plug-ins</h2>
 	
 	<p>With SWFUpload v2.0 several plugins have been introduced.  They are provided to help with common tasks associated with implementing SWFUpload.</p>
-	<p>Currently most of the documentation for using the plugis is contained in the plugin JavaScript file.</p>
+	<p>Currently most of the documentation for using the plugins is contained in the plugin JavaScript file.</p>
 	
 	<h3>Graceful Degradation</h3>
 	
